--- a/unusualbusiness/assets/styles/layout/_l-header.scss
+++ b/unusualbusiness/assets/styles/layout/_l-header.scss
@@ -13,9 +13,9 @@
   bottom: auto;
   left: 0;
   margin: 0;
-  padding: 2px $gutter;
+  padding: 0 $gutter;
   width: calc(100% - (var(--gutter) * 2));
-  border-bottom: solid 2px $light-gray;
+  height: 85px;
   background-color: $white;
 
   @media(max-width: $tablet) {
@@ -24,6 +24,11 @@
     width: 100%;
     height: 44px;
     border-bottom: none;
+  }
+
+  .home & {
+    border-bottom: solid 2px $light-gray;
+    height: 83px;
   }
 }
 
